--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <ListView
+        android:id="@+id/roomListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
