--- a/app/src/main/res/layout/room_list_item.xml
+++ b/app/src/main/res/layout/room_list_item.xml
@@ -24,6 +24,7 @@
             android:gravity="center_vertical">
 
             <TextView
+                android:id="@+id/priceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8,000"
@@ -33,6 +34,7 @@
 
 
             <TextView
+                android:id="@+id/addressAndFloorTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="마포구 서교동, 1층"
@@ -40,6 +42,7 @@
                 android:textColor="#000000"/>
 
             <TextView
+                android:id="@+id/descriptionTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
