--- a/app/src/main/res/layout/activity_view_room_detail.xml
+++ b/app/src/main/res/layout/activity_view_room_detail.xml
@@ -7,4 +7,42 @@
     android:orientation="vertical"
     tools:context=".ViewRoomDetailActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2억 8,500"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="#000000"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="방에 대한 설명이 나옵니다."
+            android:layout_marginTop="10dp"
+            android:textSize="16dp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#A0A0A0"/>
+
+
+
+
 </LinearLayout>
