--- a/app/src/main/res/layout/activity_view_room_detail.xml
+++ b/app/src/main/res/layout/activity_view_room_detail.xml
@@ -21,6 +21,7 @@
         android:padding="20dp">
 
         <TextView
+            android:id="@+id/priceTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2억 8,500"
@@ -29,6 +30,7 @@
             android:textColor="#000000"/>
 
         <TextView
+            android:id="@+id/descriptionTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="방에 대한 설명이 나옵니다."
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"/>
         
         <TextView
+            android:id="@+id/addressTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
@@ -93,6 +96,7 @@
 
 
         <TextView
+            android:id="@+id/floorTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="~층"
@@ -114,6 +118,7 @@
         android:layout_weight="1"/>
 
     <Button
+        android:id="@+id/dialBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="공인중개사에게 전화하기"/>
